# Team4Demo1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Jenkinsfile  Makefile  README.md  app.py  conection.py  create_sample_data.py  create_tables.py  database.py  docker-compose.dev.yaml  docker-compose.jenkins.yaml  docker-compose.monitoring.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  extra-requirements.in  init.sh  pyproject.toml  pytest.ini  rebuild.sh  requeriments.txt  requirements.txt  seed_data.py  swagger_config.py
jenkins/: .dockerignore  Dockerfile  README.md
models/: comment.py  recipe.py  user.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml  promtail-config.yml
monitoring/grafana/dashboards/: recipe-app.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
recipe-front/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
recipe-front/src/: App.jsx
recipe-front/src/api/: apiClient.js
recipe-front/src/components/: AuthProtectedRoute.jsx  CommentBox.jsx  ConfirmDialog.jsx  Footer.jsx  GuestOnlyRoute.jsx  Navbar.jsx
recipe-front/src/hooks/: useFormValidation.js
recipe-front/src/pages/: CreateRecipe.jsx  EditRecipe.jsx  Home.jsx  Login.jsx  NotFound.jsx  Recipe.jsx  Register.jsx  UpdateRecipe.jsx  UserRecipes.jsx
recipe-front/src/store/: AuthStore.js  recipesStore.js
recipe-front/src/test/: Home.test.jsx  Login.test.jsx  Recipe.test.jsx  Register.test.jsx  validators.test.js
recipe-front/src/utils/: validators.js
repositories/: __init__.py  comment_repository.py  recipe_repository.py  user_repository.py
schemas/: __init__.py  comment_schemas.py  recipe_schemas.py  user_schemas.py
services/: __init__.py  comment_service.py  recipe_service.py  user_service.py
tests/: conftest.py  test_app.py  test_auth.py  test_comments_crud.py  test_recipes_api.py  test_user_recipes_crud.py
utils/: jwt_utils.py
