[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.1.0"
description = "nothing relevant about this script, just say hi"
requires-python = ">=3.8"

authors = [
    { name = "Denyss", email = "carcamo.denyss@gmail.com" },
    { name = "Damaris", email = "x@gmail.com" },
    { name = "Eduardo", email = "y@gmail.com" }
]

dependencies = [
    "requests==2.32.4",
    "backoff==2.2.1",
    "flask==3.1.2",
    "Werkzeug==3.1.3"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pre-commit"
]
