[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.1.0"
description = "nothing relevant about this script, just say hi"
requires-python = ">=3.8"

authors = [
    { name = "Denyss", email = "carcamo.denyss@gmail.com" },
    { name = "Damaris", email = "x@gmail.com" },
    { name = "Eduardo", email = "y@gmail.com" }
]

dependencies = [
    "requests==2.32.4",
    "backoff==2.2.1",
    "flask==3.1.2",
    "flask-cors==5.0.0",
    "Werkzeug==3.1.3",
    "annotated-types==0.7.0",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "Flask==3.1.2",
    "greenlet==3.2.4",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "mysql-connector-python==9.4.0",
    "pydantic==2.12.0",
    "pydantic_core==2.41.1",
    "PyJWT==2.10.1",
    "SQLAlchemy==2.0.44",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.3",
    "zipp==3.23.0"
]
[project.optional-dependencies]
dev = [
    "pylint",
    "pre-commit",
    "pytest"
]
